@@ -200,6 +200,14 @@
     "type": "V"
   },
   {
+    "date": "2017-03-06",
+    "description": "Labour Day",
+    "locale": "en-AU",
+    "notes": "",
+    "region": "WA",
+    "type": "V"
+  },
+  {
     "date": "2017-03-13",
     "description": "Adelaide Cup Day",
     "locale": "en-AU",
@@ -517,14 +525,6 @@
     "locale": "en-AU",
     "notes": "",
     "region": "QLD",
-    "type": "V"
-  },
-  {
-    "date": "2017-05-01",
-    "description": "Labour Day",
-    "locale": "en-AU",
-    "notes": "",
-    "region": "WA",
     "type": "V"
   },
   {
