@@ -1,3 +1,4 @@
+- #140 AU: Fix date of Labour Day in Western Australia
 - #139 HU: Add non-working days for 2026
 - #138 ES: Add holidays for 2026
 - #137 IT: Add holiday 'Festa nazionale di San Francesco d'Assisi, patrono d'Italia'
